src/objects/EDM__c.object
<CustomObject>
    <description>Early Day Motion</description>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authored EDMs</relationshipLabel>
        <relationshipName>EDMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>EA_Campaign__c</referenceTo>
        <relationshipLabel>EDMs</relationshipLabel>
        <relationshipName>EDMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>EDM text</description>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>EDM</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EDM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EDMs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>